--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@ body {
   }
   
       .top-bar {
-              background-color: #333;
+              background-color:transparent;
               color: #fff;
               height: 50px;
               position: fixed;
