--- a/index.css
+++ b/index.css
@@ -5,19 +5,20 @@ body {
   
   }
   #slideshow {
-    width: 1920px;
-    height: 937px;
-    overflow: hidden;
     position: relative;
+    width: 100%;
+    height: 100vh;
   }
-  #slideshow img {
+  #slideshow .img2 {
     position: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 3s ease-in-out;
+    z-index: 1;
+  
+  
   }
   
   
@@ -34,6 +35,7 @@ body {
     flex-direction: column;
     text-align: center;
   }
+
   
   #slideshow p {
     color: white;
@@ -48,10 +50,10 @@ body {
   
   
   .img2{
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      }
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    }
   
       header {
     position: relative;
@@ -227,3 +229,22 @@ body {
       right: 0;
       left: auto;
     }
+
+    .footer4 {
+      background-color: transparent;
+      text-align: center;
+      padding: 10px;
+      height: 200px;
+      margin-top: 100px;
+
+    }
+    
+    .footer4 img {
+      max-width: 100%;
+      height: 100px;
+      margin-right: 9000px;
+      display: inline-block;
+  width: 200px; /* Imposta la larghezza desiderata per le immagini */
+  margin-right: 80px; /* Aggiunge uno spazio tra le immagini */
+    }
+
