--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
   #slideshow {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
   #slideshow .img2 {
     position: 0;
@@ -15,7 +15,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    opacity: 0.5;
     z-index: 1;
   
   
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,6 +47,8 @@ body {
   #slideshow img.active {
     opacity: 1;
   }
+    
+
   
   
   .img2{
@@ -248,3 +250,29 @@ body {
   margin-right: 80px; /* Aggiunge uno spazio tra le immagini */
     }
 
+    .card-container {
+      display: flex;
+    }
+    
+    .polaroid-card {
+      position: relative;
+      width: 200px;
+      height: 300px;
+      background-color: white;
+      border: 1px solid #ccc;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 10px;
+      margin: 20px;
+      overflow: hidden;
+    }
+    
+    .polaroid-card img {
+      width: 100%;
+      height: auto;
+    }
+    
+    .polaroid-card .caption {
+      text-align: center;
+      margin-top: 10px;
+    }
+    
